# ea872

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
client/: CMakeLists.txt
client/include/: view.h
client/include/controllers/: bomb_control.h  movement.h  save.h  sync.h
client/src/: main.cpp  view.cpp
client/src/controllers/: bomb_control.cpp  movement.cpp  save.cpp  sync.cpp
docs/: planodeatividades.md
include/: controller.h  model.h  view.h
include/controllers/: movement.h  save.h
include/models/: .char.h.swp  block.h  bomb.h  brick.h  char.h  coord.h  map.h  texture.h
server/: .CMakeLists.txt.swp  CMakeLists.txt
server/include/controllers/: sync.h
server/src/: main.cpp
server/src/controllers/: sync.cpp
shared/include/models/: block.h  bomb.h  brick.h  char.h  coord.h  map.h  texture.h
shared/src/models/: block.cpp  bomb.cpp  brick.cpp  char.cpp  coord.cpp  map.cpp  texture.cpp
src/: controller.cpp  main.cpp  model.cpp  view.cpp
src/controllers/: movement.cpp  save.cpp
src/models/: bomb.cpp  char.cpp  coord.cpp  map.cpp  texture.cpp
